--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+	--color-bg: linear-gradient(
+		rgb(248, 250, 253) 0%,
+		rgba(248, 250, 253, 0) 413px
+	);
+	/* --color-bg: black; */
+}
+
+.color-bg {
+	background-image: var(--color-bg);
+}
