--- a/app/globals.css
+++ b/app/globals.css
@@ -3,17 +3,23 @@
 @tailwind utilities;
 
 :root {
-	--color-bg: linear-gradient(
+	--color-bg-grad: linear-gradient(
 		rgb(248, 250, 253) 0%,
 		rgba(248, 250, 253, 0) 413px
 	);
+	--color-bg-global: #fafafa;
 	--color-bg-grey: {
-		rgb(239, 242, 245)
-	}
+		rgb(239, 242, 245);
+	};
+}
+
+.box-shadow-grey {
+	box-shadow: inset 0 -1px #eaeaea;
 }
 
 .color-bg {
-	background-image: var(--color-bg);
+	/* background-image: var(--color-bg-grad); */
+	background: var(--color-bg-global);
 }
 
 .color-bg-grey {
