addlike and getlikes functional

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,7 @@
 	background: var(--color-bg-grey);
 }
 
-.box-sizing {
-	box-sizing: content-box;
+.scrollable::-webkit-scrollbar {
+	display: none;
 }
 
