nav input animation

--- a/app/globals.css
+++ b/app/globals.css
@@ -33,3 +33,17 @@
 	display: none;
 }
 
+.slide-in {
+	animation: fadeIn .2s ease-in;
+}
+
+@keyframes fadeIn {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+
